--- a/set1/src/3_notebook_part1.ipynb
+++ b/set1/src/3_notebook_part1.ipynb
@@ -90,7 +90,7 @@
         "from matplotlib import animation, rc\n",
         "\n",
         "import urllib.request\n",
-        "urllib.request.urlretrieve('https://raw.githubusercontent.com/charlesincharge/CS155/main/2022/sets/set1/src/sgd_helper.py?token=AELBQMGMS2OFR2CDKXNRB6LB3NQL2', 'sgd_helper.py')\n",
+        "urllib.request.urlretrieve('https://raw.githubusercontent.com/emiletimothy/Caltech-CS155-2023/main/set1/src/sgd_helper.py', 'sgd_helper.py')\n",
         "\n",
         "from sgd_helper import (\n",
         "    generate_dataset1,\n",
@@ -568,7 +568,7 @@
       "outputs": [],
       "source": [
         "import urllib.request\n",
-        "urllib.request.urlretrieve('https://raw.githubusercontent.com/charlesincharge/CS155/revise-set-1/2022/sets/set1/src/sgd_multiopt_helper.py?token=AELBQMHS2RD6ZSJPEPC53CLB3NRNA', 'sgd_multiopt_helper.py')\n",
+        "urllib.request.urlretrieve('https://raw.githubusercontent.com/emiletimothy/Caltech-CS155-2023/main/set1/src/sgd_multiopt_helper.py', 'sgd_multiopt_helper.py')\n",
         "\n",
         "# Import different SGD & loss functions.\n",
         "# In particular, the loss function has multiple optima.\n",
@@ -614,7 +614,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.6"
+      "version": "3.10.6 (main, Aug 30 2022, 05:12:36) [Clang 13.1.6 (clang-1316.0.21.2.5)]"
     },
     "vscode": {
       "interpreter": {
