--- a/set1/src/3_notebook_part2.ipynb
+++ b/set1/src/3_notebook_part2.ipynb
@@ -192,7 +192,7 @@
         "#==============================================\n",
         "\n",
         "# The following should help you get started:\n",
-        "data = load_data('https://raw.githubusercontent.com/charlesincharge/CS155/main/2022/sets/set1/src/data/sgd_data.csv?token=AELBQMGH5J5YC23ZYTG34F3B3NRYC')"
+        "data = load_data('https://raw.githubusercontent.com/emiletimothy/Caltech-CS155-2023/main/set1/src/data/sgd_data.csv')"
       ]
     },
     {
@@ -284,7 +284,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.6"
+      "version": "3.10.6 (main, Aug 30 2022, 05:12:36) [Clang 13.1.6 (clang-1316.0.21.2.5)]"
     },
     "vscode": {
       "interpreter": {
