--- a/set1/src/4_notebook.ipynb
+++ b/set1/src/4_notebook.ipynb
@@ -2,12 +2,12 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/charlesincharge/CS155/blob/revise-set-1/2022/sets/set1/src/4_notebook.ipynb)"
-      ],
       "metadata": {
         "id": "b9T008hSrS4g"
-      }
+      },
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/charlesincharge/CS155/blob/revise-set-1/2022/sets/set1/src/4_notebook.ipynb)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -41,7 +41,7 @@
         "import itertools\n",
         "\n",
         "import urllib.request\n",
-        "urllib.request.urlretrieve('https://raw.githubusercontent.com/charlesincharge/CS155/main/2022/sets/set1/src/perceptron_helper.py?token=AMU3OXFXU2W4RHY2W7SB3CTB3MJQW', 'perceptron_helper.py')\n",
+        "urllib.request.urlretrieve('https://raw.githubusercontent.com/emiletimothy/Caltech-CS155-2023/main/set1/src/perceptron_helper.py', 'perceptron_helper.py')\n",
         "\n",
         "\n",
         "from perceptron_helper import (\n",
@@ -455,10 +455,14 @@
   ],
   "metadata": {
     "anaconda-cloud": {},
+    "colab": {
+      "name": "4_notebook.ipynb",
+      "provenance": []
+    },
     "kernelspec": {
-      "display_name": "Python [python3point5]",
+      "display_name": "gvs",
       "language": "python",
-      "name": "Python [python3point5]"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -470,11 +474,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.5.2"
+      "version": "3.8.12 (default, Oct 12 2021, 06:23:56) \n[Clang 10.0.0 ]"
     },
-    "colab": {
-      "name": "4_notebook.ipynb",
-      "provenance": []
+    "vscode": {
+      "interpreter": {
+        "hash": "8ed3c90ed0483e68202a65d6270025e1febd9df74c603ae7c77663275b388048"
+      }
     }
   },
   "nbformat": 4,
