Add ommitted condition for 4B

--- a/set1/set1_empty.tex
+++ b/set1/set1_empty.tex
@@ -413,9 +413,10 @@ The following few problems ask you to work with the provided Jupyter notebook fo
 \begin{problem}[4]
   A dataset $S = \{(\mathbf{x}_1, y_1),\cdots,(\mathbf{x}_N, y_N)\} \subset \mathbb{R}^d \times \mathbb{R}$ is \emph{linearly separable} if there exists a perceptron that correctly classifies all data points in the set. In other words, there exists a hyperplane that separates positive data points and negative data points.
 
-  In 2D space, what is the minimum size of a dataset that is not linearly separable, such that no three points are collinear? How about the minimum size of a dataset in 3D that is not linearly separable, such that no four points are coplanar? Please limit your explanation to a few lines - you should justify but not prove your answer.
+  In 2D space, what is the minimum size of a dataset that is not linearly separable, such that no three points are collinear? How about the minimum size of a dataset in 3D that is not linearly separable, such that no four points are coplanar, and given no 2D subspace contains a non-linearly-separable subset? Please limit your explanation to a few lines - you should justify but not prove your answer.
 
-  Finally, how does this generalize to N-dimension? More precisely, in N-dimensional space, what is the minimum size of a dataset that is not linearly separable, such that no $N+1$ points are on the same hyperplane? For the $N$-dimensional case, you may state your answer without proof or justification.
+  Finally, how does this generalize to N-dimension, in which no $<N$-dimensional subspace contains a non-linearly-separable subset? More precisely, in N-dimensional space, what is the minimum size of a dataset that is not linearly separable, such that no $N+1$ points are on the same hyperplane? For the $N$-dimensional case, you may state your answer without proof or justification.
+
 \end{problem}
 \begin{solution}
 
