--- a/set2/set2_prob3.ipynb
+++ b/set2/set2_prob3.ipynb
@@ -63,7 +63,7 @@
         "import urllib.request\n",
         "urllib.request.urlretrieve('https://raw.githubusercontent.com/emiletimothy/Caltech-CS155-2023/main/set2/data/problem3data.txt', 'problem3data.txt')\n",
         "\n",
-        "train_file = np.loadtxt('problem3data.txt')\n",
+        "train_data = np.loadtxt('problem3data.txt')\n",
         "y_train = train_data[:, 9]\n",
         "X_train = train_data[:, :9]"
       ]
