--- a/set2/set2_prob1.ipynb
+++ b/set2/set2_prob1.ipynb
@@ -184,14 +184,14 @@
         "n_pts = 40\n",
         "\n",
         "x = np.linspace(0, 5, n_pts)\n",
-        "y = 5 * x + np.random.randn(n_pts) + 2\n",
+        "y_1 = 5 * x + np.random.randn(n_pts) + 2\n",
         "\n",
         "x = np.reshape(x, (-1, 1))   # Ridge regression function expects a 2D matrix\n",
         "\n",
         "plt.figure()\n",
-        "plt.plot(x, y, marker = 'o', linewidth = 0)\n",
+        "plt.plot(x, y_1, marker = 'o', linewidth = 0)\n",
         "\n",
-        "ridge.fit(x, y)   # Fit the ridge regression model to the data\n",
+        "ridge.fit(x, y_1)   # Fit the ridge regression model to the data\n",
         "print('Ridge regression fit y = %fx + %f' % (ridge.coef_, ridge.intercept_))\n",
         "\n",
         "# Add ridge regression line to the plot:\n",
