Matched HW3 P2 Problem Letters/Numbers

--- a/set3/set3_prob2.ipynb
+++ b/set3/set3_prob2.ipynb
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem 2A: Decision Trees with Minimum Leaf Size Stopping Criterion\n",
+    "## Problem 2A(i): Decision Trees with Minimum Leaf Size Stopping Criterion\n",
     "\n",
     "Fill in the two functions below:"
    ]
@@ -171,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem 2B: Decision Trees with Maximum Depth Stopping Criterion"
+    "## Problem 2A(ii): Decision Trees with Maximum Depth Stopping Criterion"
    ]
   },
   {
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem 2D: Random Forests with Minimum Leaf Size Stopping Criterion"
+    "## Problem 2C(i): Random Forests with Minimum Leaf Size Stopping Criterion"
    ]
   },
   {
@@ -286,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem 2E: Random Forests with Maximum Depth Stopping Criterion"
+    "## Problem 2C(ii): Random Forests with Maximum Depth Stopping Criterion"
    ]
   },
   {
