--- a/set4/prob2_starter.ipynb
+++ b/set4/prob2_starter.ipynb
@@ -1,19 +1,15 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/emiletimothy/Caltech-CS155-2023/blob/main/set4/prob2_starter.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -33,30 +29,35 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Part A: Data Setup"
-      ],
       "metadata": {
         "id": "VvPFMow_NNry"
-      }
+      },
+      "source": [
+        "# Part A: Data Setup"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7m_kQfspQJNf"
+      },
+      "outputs": [],
       "source": [
         "# data preprocessing\n",
         "\n",
         "df = pd.read_csv(\"data/COVID-19_Case_Surveillance_Public_Use_Data_Subset.csv\")\n",
         "\n",
         "# TODO: preprocess df\n"
-      ],
-      "metadata": {
-        "id": "7m_kQfspQJNf"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "3Wn-AQp6FDpM"
+      },
+      "outputs": [],
       "source": [
         "# TODO: make sure your data can be converted to torch tensors\n",
         "\n",
@@ -74,78 +75,90 @@
         "\n",
         "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
         "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=32, shuffle=True) \n"
-      ],
-      "metadata": {
-        "id": "3Wn-AQp6FDpM"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Part B: Linear Neural Network"
-      ],
       "metadata": {
         "id": "Ccx89l3btfq4"
-      }
+      },
+      "source": [
+        "# Part B: Linear Neural Network"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Model Setup"
-      ],
       "metadata": {
         "id": "aICcIvNtNGk2"
-      }
+      },
+      "source": [
+        "## Model Setup"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "qtMSBKxdFfjq"
+      },
+      "outputs": [],
       "source": [
         "# TODO: Make your model, optmizer, and loss function here.\n",
         "\n",
         "model = None"
-      ],
-      "metadata": {
-        "id": "qtMSBKxdFfjq"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Training Loop"
-      ],
       "metadata": {
         "id": "uKl5Tm2TNXxc"
-      }
+      },
+      "source": [
+        "## Training Loop"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "z-RVMsj0NaN7"
+      },
+      "outputs": [],
       "source": [
         "# Some layers, such as Dropout, behave differently during training\n",
         "\n",
         "# model.train()\n",
         "# TODO: Write your training loop here."
-      ],
-      "metadata": {
-        "id": "z-RVMsj0NaN7"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Testing Loop"
-      ],
       "metadata": {
         "id": "YZCNGh5mNbE0"
-      }
+      },
+      "source": [
+        "## Testing Loop"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2SxnJ3eHNfgb",
+        "outputId": "f72930fa-b984-4512-9402-fe0eb29c7ee7"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Test set: Average loss: 0.0031, Accuracy: 53694/55222 (97.2330)\n"
+          ]
+        }
+      ],
       "source": [
         "# Putting layers like Dropout into evaluation mode\n",
         "# model.eval()\n",
@@ -157,66 +170,71 @@
         "\n",
         "\n",
         "# TODO: Show results."
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2SxnJ3eHNfgb",
-        "outputId": "f72930fa-b984-4512-9402-fe0eb29c7ee7"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Test set: Average loss: 0.0031, Accuracy: 53694/55222 (97.2330)\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Weight Matrix Visualization"
-      ],
       "metadata": {
         "id": "sf9UHC-kZ25f"
-      }
+      },
+      "source": [
+        "## Weight Matrix Visualization"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "aBXDC10mRNto"
+      },
+      "outputs": [],
       "source": [
         "# weights = model.state_dict()['0.weight']\n",
         "\n",
         "# sns.heatmap(weights)"
-      ],
-      "metadata": {
-        "id": "aBXDC10mRNto"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Part C: 2-Layer Linear Model"
-      ],
       "metadata": {
         "id": "91H6-NUVZ8Gd"
-      }
+      },
+      "source": [
+        "# Part C: 2-Layer Linear Model"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# TODO: Repeat for 2-layer model"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "SUd6CAB-WebM"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# TODO: Repeat for 2-layer model"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "base",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 17:00:33) \n[Clang 13.0.1 ]"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "4b5295d72cc8c3d140bbb6686d5919ce0ad0a523816efde1e1cd082b7d39dbc7"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
