Fix title numbering typo.

--- a/set4/prob3_starter.ipynb
+++ b/set4/prob3_starter.ipynb
@@ -3,20 +3,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/emiletimothy/Caltech-CS155-2023/blob/main/set4/prob3_starter.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "6WZsJE6InQvH"
       },
       "source": [
-        "# Problem 2 Sample Code\n",
+        "# Problem 3 Sample Code\n",
         "\n",
         "This sample code is meant as a guide on how to use PyTorch and how to use the relevant model layers. This not a guide on how to design a network and the network in this example is intentionally designed to have poor performace."
       ]
@@ -150,9 +151,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "scrolled": false,
         "id": "NT73uPcbnQvL",
-        "outputId": "05357c69-ac90-4ac1-e370-de4349ccbacd"
+        "outputId": "05357c69-ac90-4ac1-e370-de4349ccbacd",
+        "scrolled": false
       },
       "outputs": [
         {
@@ -334,6 +335,10 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "base",
       "language": "python",
@@ -355,10 +360,6 @@
       "interpreter": {
         "hash": "4b5295d72cc8c3d140bbb6686d5919ce0ad0a523816efde1e1cd082b7d39dbc7"
       }
-    },
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
     }
   },
   "nbformat": 4,
