Fix links to data

--- a/set5/set5_prob2.ipynb
+++ b/set5/set5_prob2.ipynb
@@ -32,8 +32,8 @@
    "outputs": [],
    "source": [
     "# download the dataset\n",
-    "!wget -O train.txt https://github.com/emiletimothy/Caltech-CS155-2023/blob/main/set5/data/train.txt\n",
-    "!wget -O test.txt https://github.com/emiletimothy/Caltech-CS155-2023/blob/main/set5/data/test.txt"
+    "!wget -O train.txt https://raw.githubusercontent.com/emiletimothy/Caltech-CS155-2023/main/set5/data/train.txt\n",
+    "!wget -O test.txt https://raw.githubusercontent.com/emiletimothy/Caltech-CS155-2023/main/set5/data/test.txt"
    ]
   },
   {
