--- a/set5/set5_prob3.ipynb
+++ b/set5/set5_prob3.ipynb
@@ -38,7 +38,7 @@
       "outputs": [],
       "source": [
         "# download the helper function\n",
-        "!wget -O P3CHelpers.py https://github.com/emiletimothy/Caltech-CS155-2023/blob/main/set5/P3CHelpers.py"
+        "!wget -O P3CHelpers.py https://raw.githubusercontent.com/emiletimothy/Caltech-CS155-2023/main/set5/P3CHelpers.py"
       ]
     },
     {
@@ -50,7 +50,7 @@
       "outputs": [],
       "source": [
         "# download the dataset\n",
-        "!wget -O dr_seuss.txt https://github.com/emiletimothy/Caltech-CS155-2023/blob/main/set5/data/dr_seuss.txt"
+        "!wget -O dr_seuss.txt https://raw.githubusercontent.com/emiletimothy/Caltech-CS155-2023/main/set5/data/dr_seuss.txt"
       ]
     },
     {
