Added hint to Problem 1J

--- a/set5/set5_template.tex
+++ b/set5/set5_template.tex
@@ -117,6 +117,9 @@ For each notebook, you need to save a copy to your drive.
 \end{solution}
 
 \problem[2] One of the two expressions in problems H and I for calculating the pseudoinverse is highly prone to numerical errors. Which one is it, and why? Justify your answer using condition numbers.
+
+\textit{Hint}: Note that the transpose of a matrix is easy to compute. Compare the condition numbers of $\Sigma$ and $X^T X$. The condition number of a matrix $A$ is given by $\kappa(A) = \frac{\sigma_{max}(A)}{\sigma_{min}(A)}$, where $\sigma_{max}(A)$ and $\sigma_{min}(A)$ are the maximum and minimum singular values of $A$, respectively.
+
 \begin{solution}
 
 \end{solution}
