--- a/set4/prob2_starter.ipynb
+++ b/set4/prob2_starter.ipynb
@@ -1,22 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "0fzZb8grE78U"
       },
@@ -33,35 +19,57 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Part A: Data Setup"
-      ],
       "metadata": {
         "id": "VvPFMow_NNry"
-      }
+      },
+      "source": [
+        "# Part A: Data Setup"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {
+        "id": "7m_kQfspQJNf"
+      },
+      "outputs": [],
       "source": [
         "# data preprocessing\n",
         "\n",
         "df = pd.read_csv(\"data/COVID-19_Case_Surveillance_Public_Use_Data_Subset.csv\")\n",
         "\n",
-        "# TODO: preprocess df\n"
-      ],
-      "metadata": {
-        "id": "7m_kQfspQJNf"
-      },
-      "execution_count": null,
-      "outputs": []
+        "# Preprocess df\n",
+        "# Drop rows with Nans \n",
+        "new_df = df.dropna()\n",
+        "# new_df"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "3Wn-AQp6FDpM"
+      },
+      "outputs": [
+        {
+          "ename": "AttributeError",
+          "evalue": "'NoneType' object has no attribute 'size'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[1;32mc:\\Users\\subot\\Caltech-CS155-2023\\set4\\prob2_starter.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/subot/Caltech-CS155-2023/set4/prob2_starter.ipynb#W3sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m test_y \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/subot/Caltech-CS155-2023/set4/prob2_starter.ipynb#W3sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# make datasets and dataloaders\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/subot/Caltech-CS155-2023/set4/prob2_starter.ipynb#W3sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m train_dataset \u001b[39m=\u001b[39m TensorDataset(train_X, train_y)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/subot/Caltech-CS155-2023/set4/prob2_starter.ipynb#W3sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m test_dataset \u001b[39m=\u001b[39m TensorDataset(test_X, test_y)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/subot/Caltech-CS155-2023/set4/prob2_starter.ipynb#W3sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m train_loader \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mutils\u001b[39m.\u001b[39mdata\u001b[39m.\u001b[39mDataLoader(train_dataset, batch_size\u001b[39m=\u001b[39m\u001b[39m32\u001b[39m, shuffle\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+            "File \u001b[1;32mc:\\Users\\subot\\anaconda3\\lib\\site-packages\\torch\\utils\\data\\dataset.py:189\u001b[0m, in \u001b[0;36mTensorDataset.__init__\u001b[1;34m(self, *tensors)\u001b[0m\n\u001b[0;32m    188\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39mtensors: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 189\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39mall\u001b[39;49m(tensors[\u001b[39m0\u001b[39;49m]\u001b[39m.\u001b[39;49msize(\u001b[39m0\u001b[39;49m) \u001b[39m==\u001b[39;49m tensor\u001b[39m.\u001b[39;49msize(\u001b[39m0\u001b[39;49m) \u001b[39mfor\u001b[39;49;00m tensor \u001b[39min\u001b[39;49;00m tensors), \u001b[39m\"\u001b[39m\u001b[39mSize mismatch between tensors\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    190\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtensors \u001b[39m=\u001b[39m tensors\n",
+            "File \u001b[1;32mc:\\Users\\subot\\anaconda3\\lib\\site-packages\\torch\\utils\\data\\dataset.py:189\u001b[0m, in \u001b[0;36m<genexpr>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m    188\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39mtensors: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m--> 189\u001b[0m     \u001b[39massert\u001b[39;00m \u001b[39mall\u001b[39m(tensors[\u001b[39m0\u001b[39;49m]\u001b[39m.\u001b[39;49msize(\u001b[39m0\u001b[39m) \u001b[39m==\u001b[39m tensor\u001b[39m.\u001b[39msize(\u001b[39m0\u001b[39m) \u001b[39mfor\u001b[39;00m tensor \u001b[39min\u001b[39;00m tensors), \u001b[39m\"\u001b[39m\u001b[39mSize mismatch between tensors\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    190\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtensors \u001b[39m=\u001b[39m tensors\n",
+            "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'size'"
+          ]
+        }
+      ],
       "source": [
         "# TODO: make sure your data can be converted to torch tensors\n",
         "\n",
-        "train_X = None\n",
-        "train_y = None\n",
+        "train_X = df.sample(frac = 0.9)\n",
+        "train_y = df.\n",
         "\n",
         "test_X = None\n",
         "test_y = None\n",
@@ -74,78 +82,103 @@
         "\n",
         "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
         "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=32, shuffle=True) \n"
-      ],
-      "metadata": {
-        "id": "3Wn-AQp6FDpM"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Part B: Linear Neural Network"
-      ],
       "metadata": {
         "id": "Ccx89l3btfq4"
-      }
+      },
+      "source": [
+        "# Part B: Linear Neural Network"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Model Setup"
-      ],
       "metadata": {
         "id": "aICcIvNtNGk2"
-      }
+      },
+      "source": [
+        "## Model Setup"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# TODO: Make your model, optmizer, and loss function here.\n",
-        "\n",
-        "model = None"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "qtMSBKxdFfjq"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# TODO: Make your model, optmizer, and loss function here.\n",
+        "\n",
+        "model = \n",
+        "\n",
+        "# Using Sequential to create a small model. When `model` is run,\n",
+        "# input will first be passed to `Conv2d(1,20,5)`. The output of\n",
+        "# `Conv2d(1,20,5)` will be used as the input to the first\n",
+        "# `ReLU`; the output of the first `ReLU` will become the input\n",
+        "# for `Conv2d(20,64,5)`. Finally, the output of\n",
+        "# `Conv2d(20,64,5)` will be used as input to the second `ReLU`\n",
+        "model = nn.Sequential(\n",
+        "          nn.Conv2d(1,20,5),\n",
+        "          nn.ReLU(),\n",
+        "          nn.Conv2d(20,64,5),\n",
+        "          nn.ReLU()\n",
+        "        )"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Training Loop"
-      ],
       "metadata": {
         "id": "uKl5Tm2TNXxc"
-      }
+      },
+      "source": [
+        "## Training Loop"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "z-RVMsj0NaN7"
+      },
+      "outputs": [],
       "source": [
         "# Some layers, such as Dropout, behave differently during training\n",
         "\n",
         "# model.train()\n",
         "# TODO: Write your training loop here."
-      ],
-      "metadata": {
-        "id": "z-RVMsj0NaN7"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Testing Loop"
-      ],
       "metadata": {
         "id": "YZCNGh5mNbE0"
-      }
+      },
+      "source": [
+        "## Testing Loop"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2SxnJ3eHNfgb",
+        "outputId": "f72930fa-b984-4512-9402-fe0eb29c7ee7"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Test set: Average loss: 0.0031, Accuracy: 53694/55222 (97.2330)\n"
+          ]
+        }
+      ],
       "source": [
         "# Putting layers like Dropout into evaluation mode\n",
         "# model.eval()\n",
@@ -157,66 +190,78 @@
         "\n",
         "\n",
         "# TODO: Show results."
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2SxnJ3eHNfgb",
-        "outputId": "f72930fa-b984-4512-9402-fe0eb29c7ee7"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Test set: Average loss: 0.0031, Accuracy: 53694/55222 (97.2330)\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Weight Matrix Visualization"
-      ],
       "metadata": {
         "id": "sf9UHC-kZ25f"
-      }
+      },
+      "source": [
+        "## Weight Matrix Visualization"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "aBXDC10mRNto"
+      },
+      "outputs": [],
       "source": [
         "# weights = model.state_dict()['0.weight']\n",
         "\n",
         "# sns.heatmap(weights)"
-      ],
-      "metadata": {
-        "id": "aBXDC10mRNto"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Part C: 2-Layer Linear Model"
-      ],
       "metadata": {
         "id": "91H6-NUVZ8Gd"
-      }
+      },
+      "source": [
+        "# Part C: 2-Layer Linear Model"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# TODO: Repeat for 2-layer model"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "SUd6CAB-WebM"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# TODO: Repeat for 2-layer model"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.12 ('base')",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.12"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "2dbb8515ca420b22101a2288aabb3f693d845976ba24ed275d6ea36f12873f3c"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
