--- a/miniproject2/miniproject2_template.tex
+++ b/miniproject2/miniproject2_template.tex
@@ -1,108 +1,233 @@
-\documentclass{article}
-\usepackage{listings}
-\usepackage{amsmath}
-\usepackage{subfig}
-\usepackage{amsthm}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{graphicx}
-\usepackage{mdwlist}
-\usepackage{geometry}
-\usepackage{titlesec}
-\usepackage{palatino}
-\usepackage{mathrsfs}
-\usepackage{fancyhdr}
-\usepackage{paralist}
-\usepackage{todonotes}
-\usepackage{tikz}
-\usepackage{float} % Place figures where you ACTUALLY want it
-\usepackage{comment} % A hack to toggle sections
-\usepackage{ifthen}
-\usepackage{mdframed}
-\usepackage{verbatim}
-\usepackage{listings}
-\usepackage{bbm}
-\usepackage{upquote} % Prevents backticks replacing single-quotes in verbatim
-\usepackage[strings]{underscore}
-\usepackage[colorlinks=true]{hyperref}
-\usetikzlibrary{positioning,shapes,backgrounds}
-
-\geometry{margin=1in}
-\geometry{headheight=2in}
-\geometry{top=2in}
-
-\setlength{\marginparwidth}{2.15cm}
-\setlength{\parindent}{0em}
-\setlength{\parskip}{0.6\baselineskip}
-
-\rhead{}
-\lhead{}
-
-% Spacing settings.
-\titlespacing\section{0pt}{12pt plus 2pt minus 2pt}{0pt plus 2pt minus 2pt}
-\titlespacing\subsection{0pt}{12pt plus 4pt minus 2pt}{0pt plus 2pt minus 2pt}
-\titlespacing\subsubsection{0pt}{12pt plus 4pt minus 2pt}{0pt plus 2pt minus 2pt}
-\renewcommand{\baselinestretch}{1.15}
-
-% Shortcuts for commonly used operators.
-\newcommand{\E}{\mathbb{E}}
-\newcommand{\Var}{\operatorname{Var}}
-\newcommand{\Cov}{\operatorname{Cov}}
-\newcommand{\Bias}{\operatorname{Bias}}
-\DeclareMathOperator{\argmin}{arg\,min}
-\DeclareMathOperator{\argmax}{arg\,max}
-
-% Do not number subsections and below.
-\setcounter{secnumdepth}{1}
-
-% Custom format subsection.
-\titleformat*{\subsection}{\large\bfseries}
-
-% Set up the problem environment.
-\newcounter{problem}[section]
-\newenvironment{problem}[1][]
-  {\begingroup
-    \setlength{\parskip}{0em}
-    \refstepcounter{problem}\par\addvspace{1em}\textbf{Problem~\Alph{problem}\!
-    \ifthenelse{\equal{#1}{}}{}{ [#1 points]}:}
-  \endgroup}
-
-% Set up the subproblem environment.
-\newcounter{subproblem}[problem]
-\newenvironment{subproblem}[1][]
-  {\begingroup
-    \setlength{\parskip}{0em}
-    \refstepcounter{subproblem}\par\medskip\textbf{\roman{subproblem}.\!
-    \ifthenelse{\equal{#1}{}}{}{ [#1 points]:}}
-  \endgroup}
-
-% Set up the teachers and materials commands.
-\newcommand\teachers[1]
-  {\begingroup
-    \setlength{\parskip}{0em}
-    \vspace{0.3em} \textit{\hspace*{2em} TAs responsible: #1} \par
-  \endgroup}
-\newcommand\materials[1]
-  {\begingroup
-    \setlength{\parskip}{0em}
-    \textit{\hspace*{2em} Relevant materials: #1} \par \vspace{1em}
-  \endgroup}
-
-% Set up the hint environment.
-\newenvironment{hint}[1][]
-  {\begin{em}\textbf{Hint: }}
-  {\end{em}}
+\newif\ifshowsolutions
+\showsolutionstrue
+\input{./preamble}
 
 
-% Set up the solution environment.
-\ifshowsolutions
-  \newenvironment{solution}[1][]
-    {\par\medskip \begin{mdframed}\textbf{Solution~\Alph{problem}#1:} \begin{em}}
-    {\end{em}\medskip\end{mdframed}\medskip}
-  \newenvironment{subsolution}[1][]
-    {\par\medskip \begin{mdframed}\textbf{Solution~\Alph{problem}#1.\roman{subproblem}:} \begin{em}}
-    {\end{em}\medskip\end{mdframed}\medskip}
-\else
-  \excludecomment{solution}
-  \excludecomment{subsolution}
-\fi
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% HEADER
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\chead{
+  {\vbox{
+      Machine Learning \& Data Mining \hfill
+      Caltech CS/CNS/EE 155 \hfill \\[1pt]
+      Miniproject 2\hfill
+      February 2023 \\
+    }
+  }
+}
+
+\begin{document}
+\pagestyle{fancy}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% PROBLEM 1
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\newpage
+
+\section{Introduction [5 points]}
+\begin{itemize}
+    \item Group members:
+    \item Colab link:
+    \item Piazza link:
+    \item Division of labor:
+    \item Packages used:
+\end{itemize}
+
+\newpage
+
+\section{Basic Visualizations [20 points]}
+
+\subsection{Discussion}
+
+Visualization description goes here. You can reference figures with Figure \ref{fig:basic_vis_1}.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{All ratings in the MovieLens Dataset}
+    \label{fig:basic_vis_1}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{All ratings of the ten most popular movies (movies which have received the most ratings).}
+    \label{fig:basic_vis_2}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{All ratings of the ten best movies (movies with the highest average ratings).}
+    \label{fig:basic_vis_3}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{All ratings of movies from the genre [insert].}
+    \label{fig:basic_vis_4a}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{All ratings of movies from the genre [insert].}
+    \label{fig:basic_vis_4b}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{All ratings of movies from the genre [insert].}
+    \label{fig:basic_vis_4c}
+\end{figure}
+
+\newpage
+
+\section{Matrix Factorization Visualizations [60 points]}
+
+\subsection{Matrix Factorization Methods}
+
+Your report should contain a section dedicated to matrix factorization methods. How do each of these methods work? Please be specific and include equations. How do they differ? How did they perform in comparison to one another on the test set? Can these methods’ differences explain why they perform differently on the test set?
+
+\subsection{Visualizations}
+
+\subsubsection{Visualization Discussion}
+
+Your report should also contain a section dedicated to matrix factorization visualizations. What, in general, did you observe? Did the results match what you would expect to see? How does the visualization of the most popular movies compare to the visualization of the best movies? How do the visualizations of the three genres you chose compare to one another? How do the visualizations produced by the different matrix factorization methods compare to one another? Be sure to include some plots to indicate which phenomena you’re referring to with respect to your observations. You can refer to specific figures with Figure \ref{fig:hw5_vis_a}
+
+\subsubsection{Visualization Plots}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{\textbf{HW5 A:} Any ten movies of your choice from the MovieLens dataset.}
+    \label{fig:hw5_vis_a}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{\textbf{HW5 B:} The ten most popular movies (movies which have received the most ratings).}
+    \label{fig:hw5_vis_b}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{\textbf{HW5 C:} The ten best movies (movies with the highest average ratings).}
+    \label{fig:hw5_vis_c}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{\textbf{HW5 D1:} Ten movies from the genre [insert].}
+    \label{fig:hw5_vis_d1}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{\textbf{HW5 D2:} Ten movies from the genre [insert].}
+    \label{fig:hw5_vis_d2}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{\textbf{HW5 D3:} Ten movies from the genre [insert].}
+    \label{fig:hw5_vis_d3}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{\textbf{Bias A:} Any ten movies of your choice from the MovieLens dataset.}
+    \label{fig:bias_vis_a}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{\textbf{Bias B:} The ten most popular movies (movies which have received the most ratings).}
+    \label{fig:bias_vis_b}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{\textbf{Bias C:} The ten best movies (movies with the highest average ratings).}
+    \label{fig:bias_vis_c}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{\textbf{Bias D1:} Ten movies from the genre [insert].}
+    \label{fig:bias_vis_d1}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{\textbf{Bias D2:} Ten movies from the genre [insert].}
+    \label{fig:bias_vis_d2}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{\textbf{Bias D3:} Ten movies from the genre [insert].}
+    \label{fig:bias_vis_d3}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{\textbf{COTS A:} Any ten movies of your choice from the MovieLens dataset.}
+    \label{fig:cots_vis_a}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{\textbf{COTS B:} The ten most popular movies (movies which have received the most ratings).}
+    \label{fig:cots_vis_b}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{\textbf{COTS C:} The ten best movies (movies with the highest average ratings).}
+    \label{fig:cots_vis_c}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{\textbf{COTS D1:} Ten movies from the genre [insert].}
+    \label{fig:cots_vis_d1}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{\textbf{COTS D2:} Ten movies from the genre [insert].}
+    \label{fig:cots_vis_d2}
+\end{figure}
+
+\begin{figure}[!h]
+    \centering
+    \includegraphics[width=0.4\textwidth]{example-image.jpg}
+    \caption{\textbf{COTS D3:} Ten movies from the genre [insert].}
+    \label{fig:cots_vis_d3}
+\end{figure}
+
+\end{document}
